--- a/styles.css
+++ b/styles.css
@@ -64,12 +64,25 @@ button:hover {
   color: #333;
 }
 
+#image1Canvas, #image2Canvas {
+  position: absolute;
+  border: 1px solid white;
+  top: 0;
+  left: 0;
+  z-index: 20;
+}
+
+
 .point {
   position: absolute;
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  border-color:black;
+  width: 4px;
+  height: 4px;
   transform: translate(-50%, -50%); /* this centers the point at the clicked location */
-  z-index: 10;
+  z-index: 30;
+}
+
+.label {
+  position: absolute;
+  font-size: 8px;
+  z-index: 40;
 }
